--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="./assets/css/bootstrap-utilities.css">
+    <link rel="stylesheet" href="./assets/css/calendar.css">
 
     <title>React App</title>
   </head>
